src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>External_Only_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Only Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Formula__c</fullName>
        <formula>IF( 

INCLUDES( Product_Family__c , &quot;Member Portal&quot;), &apos;Member Portal&apos;, NULL) + &apos;;&apos; +

IF(
OR( 
INCLUDES( Product_Family__c , &quot;Engage&quot;), 
INCLUDES( Product_Family__c , &quot;Engage - Feature Set&quot;)), &quot;Engage&quot;, NULL) + &apos;;&apos; + 

IF( 
OR( 
INCLUDES( Product_Family__c , &quot;Choice&quot;), 
INCLUDES( Product_Family__c , &quot;Choice - Feature Set&quot;)), &quot;Choice&quot;, NULL) + &apos;;&apos; + 

IF( 
OR( 
INCLUDES( Product_Family__c , &quot;Connect&quot;), 
INCLUDES( Product_Family__c , &quot;Connect - Feature Set&quot;)), &quot;Connect&quot;, NULL) + &apos;;&apos; +

IF( 
OR( 
INCLUDES( Product_Family__c , &quot;Real Appeal&quot;)), &quot;Real Appeal&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optum_Product_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Optum Product ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_Formula__c</fullName>
        <formula>IF(
OR(
INCLUDES(Product_Family__c,&apos;Engage&apos;), 
INCLUDES(Product_Family__c,&apos;Engage - Feature Set&apos;)), &apos;Engage&apos;,
IF(
OR(
INCLUDES(Product_Family__c,&apos;Choice&apos;), 
INCLUDES(Product_Family__c,&apos;Choice - Feature Set&apos;)), &apos;Choice&apos;,
IF(
OR(
INCLUDES(Product_Family__c,&apos;Connect&apos;), 
INCLUDES(Product_Family__c,&apos;Connect - Feature Set&apos;)), &apos;Connect&apos;, &apos;N/A&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Choice</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Engage - Feature Set</fullName>
                </value>
                <value>
                    <fullName>Choice - Feature Set</fullName>
                </value>
                <value>
                    <fullName>Connect - Feature Set</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Member Portal</fullName>
                </value>
                <value>
                    <fullName>Real Appeal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Order__c</fullName>
        <formula>IF(
ISPICKVAL(Product_Type__c, &apos;Package&apos;), 1,

IF(
ISPICKVAL(Product_Type__c, &apos;Implementation Fee&apos;), 2,

IF(
ISPICKVAL(Product_Type__c, &apos;Add-On&apos;), 3,

IF(
ISPICKVAL(Product_Type__c, &apos;Feature&apos;), 4, 100))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Type__c</fullName>
        <label>Product Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Tailored Outcome Rewards</fullName>
                </value>
                <value>
                    <fullName>Tailored Activity Rewards</fullName>
                </value>
                <value>
                    <fullName>Pre-Defined Outcomes</fullName>
                </value>
                <value>
                    <fullName>Pre-Defined Activity</fullName>
                </value>
                <value>
                    <fullName>Upsell Feature</fullName>
                </value>
                <value>
                    <fullName>Standard Feature</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>One Time Fee</fullName>
                </value>
                <value>
                    <fullName>Member Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Recognition__c</fullName>
        <label>Revenue Recognition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Date Of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Temp_ID__c</fullName>
        <externalId>true</externalId>
        <label>Temp ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>